[package]
name = "sol-arb-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
solana-sdk = "1.18"
solana-client = "1.18"
solana-program = "1.18"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base58 = "0.2"
dotenv = "0.15"
solana-address-lookup-table-program = "1.18"
futures = "0.3"
